# fastapi-libreria

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt  test.db
.github/workflows/: testing.yml
alembic/: env.py
app/: database.py  dependecies.py  main.py
app/core/: config.py  redis_client.py  security.py
app/crud/: author_crud.py  book_crud.py  loan_crud.py  user_crud.py
app/models/: author_model.py  book_model.py  loan_model.py  user_model.py
app/routers/: auth_router.py  author_router.py  book_router.py  loan_router.py  user_router.py
app/schema/: author_schema.py  book_schema.py  loan_schema.py  user_schema.py
app/services/: email.py
app/templates/: base.html  loan_confirmation.html  welcome.html
app/tests/: conftest.py  conftests.py  test_books.py
