[project]
name = "fastapi-libreria"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "psycopg2-binary>=2.9.11",
    "python-multipart>=0.0.21",
    "sqlalchemy>=2.0.45",
    "uvicorn",
    "passlib[bcrypt]",
    "python-jose[cryptography]",
    "pydantic-settings",
    "python-dotenv",
    "alembic>=1.17.2",
    "pytest>=9.0.2",
    "httpx>=0.28.1",
    "fastapi-mail>=1.6.1",
    "redis>=7.1.0",
    "gunicorn>=23.0.0",
    "pytest-asyncio>=1.3.0",
    "aiosqlite>=0.22.1",
]
